src/container/container.css
* {
    font-family: Verdana, Tahoma, sans-serif;
}

.container {
    display: flex;
    font-size: 7pt;
}

.reference, .recommendation {
    height: 100%;
}

.recommendation .wrapper {
    display: table;
}

.recommendation .button-wrapper {
    display: table-cell;
    vertical-align: middle;
    padding: 10px;
}

.recommendation .scroller {
    display: block;
    background: #caddfd;
    border-radius: 5px;
    border: none;
    width: 25px;
    height: 50px;
    margin: 0 auto;
}

.recommendation .scroller:hover:not(:disabled) {
    cursor: pointer;
    background: #aecbfb;
}

.recommendation .scroller:focus:not(focus) {
    outline: none;
}

.recommendation .viewport {
    display: flex;
    width: 600px;
    white-space: nowrap;
    overflow-y: hidden;
    overflow-x: auto;
}

.viewport::-webkit-scrollbar {
    display: none;
}

